hermes_fuzz_executed/fuzz_75_execution
'use strict';
let a = {};
a.foo = async function a() {
    let b = await Promise.resolve([Promise.resolve('done'), b]);
    await Promise.resolve(b);
    return 1 + 2;
}; 
a.toString = function a() {
    return '';
};
a;
 
```

See https: 

Execution Output ------------------:
test.js:15:12: error: non-terminated template literal
See https: 
           ^
test.js:13:3: note: template literal started here
```
  ^
test.js:15:12: error: invalid expression
See https: 
           ^
